# tudi

./: Cargo.toml  LICENSE.md  README.md
src/: bounded.rs  bounded_moving_object.rs  bounds.rs  coordinate.rs  direction.rs  dynamically_bounded.rs  lib.rs  mover.rs  moving_object.rs  origin_centered_bounds.rs  out_of_bounds_error.rs  positioned.rs
src/grid/: clone_grid.rs  generic_grid.rs  grid_coordinate.rs  grid_creation_error.rs  grid_error.rs  grid_iter.rs  mod.rs  performance_tuning.rs
tests/data/: row_expansion_test_1.txt  row_expansion_test_3.txt  row_expansion_test_3_expected_result.txt
